using System;
using UnityEngine;

public enum PlayerInputEventType
{
	NEW_NPC,
	NEW_ARTIFACT,
	NEW_QUEST,

	ZOOM_OUT,
	ZOOM_IN,
	CAMERA_PAN,

	CANCEL,
	SUBMIT
}

public enum InputMode
{
	IDLE,

	PLACING_NPC,
	PLACED_NPC,

	PLACING_ARTIFACT,
	PLACED_ARTIFACT,

	SELECTING_QUEST_NPC,
	SELECTED_QUEST_NPC,
	SELECTING_QUEST_ARTIFACT,
	SELECTED_QUEST_ARTIFACT,
	QUEST_SELECTED
}